# dot2tex

./: CHANGES  pyproject.toml  readme.md  setup.py
docs/: conf.py  index.rst  installation_guide.rst
docs/docgraphs/: pgfarrows.dot
dot2tex/: base.py  dot2tex.py  dotparsing.py  pgfformat.py  pstricksformat.py
tests/: test_dot2tex.py  test_dotparsing.py
tests/experimental/: test_buildexamples.py  test_comparedotparsing.py  test_multirender.py
