[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dot2tex"
version = '2.12.0'

description = "A Graphviz to LaTeX converter"
readme = "readme.md"
requires-python = ">=3.7"
dependencies = [
    "pyparsing >= 3.0",
]
authors = [
  {name = "Kjell Magne Fauske", email = "kjellmf@gmail.com"},
]
license = "MIT"

classifiers = [
  'Development Status :: 4 - Beta',
  'Environment :: Console',
  'Intended Audience :: Science/Research',
  'Natural Language :: English',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Topic :: Scientific/Engineering :: Visualization',
  'Topic :: Text Processing :: Markup :: LaTeX',
  'Topic :: Utilities',
]

[project.urls]
"Homepage" = "https://github.com/sagemath/dot2tex"

[project.scripts]
dot2tex = "dot2tex.dot2tex:main"

[project.optional-dependencies]
test = [
    "pytest",
]
